<resources>
    <string name="app_name">Partnershit</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="name_example">Peter</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="email_example" translatable="false">peterABC@host.com</string>
    <string name="password">Password</string>
    <string name="password_hint" translatable="false">xxxxxxxx</string>
    <string name="Facebook_login">Login by Facebook</string>
    <string name="login_register">Login / Register</string>
</resources>
